feat: add mod `conn` and `handler`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     },
     "cSpell.words": [
         "clientbound",
+        "maskraft",
         "proto",
         "repr",
         "serverbound"
