--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ members = [".", "proto"]
 
 [dependencies]
 log = "0.4.20"
+num_enum = "0.7.2"
 proto = { path = "proto" }
 simple_logger = "4.3.3"
